started write functional to api/og and to request them

--- a/src/components/editor/themes/playgroundEditorThemes/playgroundEditorTheme.css
+++ b/src/components/editor/themes/playgroundEditorThemes/playgroundEditorTheme.css
@@ -113,6 +113,12 @@
     overflow-x: auto;
     position: relative;
     tab-size: 2;
+    font-size: 16px;
+}
+
+.editor-code span {
+    font-size: 16px;
+
 }
 
 .editor-code:before {
