--- a/src/components/editor/themes/limeEditorTheme/limeEditorTheme.css
+++ b/src/components/editor/themes/limeEditorTheme/limeEditorTheme.css
@@ -1,3 +1,15 @@
+.editor-code {
+    font-size: 40px;
+}
+
+code span {
+    font-size: 13px;
+}
+
+code.editor-code ltr::before {
+    font-size: 16px;
+}
+
 .editor-ltr {
     text-align: left;
 }
@@ -121,7 +133,7 @@
     /* background-color: #eee; */
     left: 0;
     top: 0;
-    border-right: 1px solid #ccc;
+    /* border-right: 1px solid #ccc; */
     padding: 8px;
     color: #777;
     white-space: pre-wrap;
