--- a/src/components/editor/themes/dracula/draculaEditorTheme.css
+++ b/src/components/editor/themes/dracula/draculaEditorTheme.css
@@ -132,7 +132,7 @@ code.editor-code ltr::before {
     font-size: 20px;
 }
 
-.editor-code.ltr:before {
+.editor-code:before {
     content: attr(data-gutter);
     position: absolute;
     /* background-color: #eee; */
@@ -144,7 +144,6 @@ code.editor-code ltr::before {
     white-space: pre-wrap;
     text-align: right;
     min-width: 25px;
-    z-index: 100;
 }
 
 .editor-table {
@@ -453,11 +452,11 @@ code.editor-code ltr::before {
 }
 
 .editor-tokenComment {
-    color: slategray;
+    color: #6272a4;
 }
 
 .editor-tokenPunctuation {
-    color: #999;
+    color: #ff79c6;
 }
 
 .editor-tokenProperty {
@@ -465,7 +464,7 @@ code.editor-code ltr::before {
 }
 
 .editor-tokenSelector {
-    color: #690;
+    color: #50fa7b;
 }
 
 .editor-tokenOperator {
@@ -473,15 +472,15 @@ code.editor-code ltr::before {
 }
 
 .editor-tokenAttr {
-    color: #07a;
+    color: #ffb86c;
 }
 
 .editor-tokenVariable {
-    color: #e90;
+    color: #ff79c6;
 }
 
 .editor-tokenFunction {
-    color: #dd4a68;
+    color: #ff5555;
 }
 
 .editor-mark {
