fixed bugs with styles white-space

--- a/src/components/editor/themes/playgroundEditorThemes/playgroundEditorTheme.css
+++ b/src/components/editor/themes/playgroundEditorThemes/playgroundEditorTheme.css
@@ -1,52 +1,47 @@
-/* .editor-code {
-    font-size: 40px;
-} */
-
-
 code span {
-    font-size: 13px;
+    font-size: 20px;
 }
 
 code.editor-code ltr::before {
-    font-size: 16px;
+    font-size: 20px;
 }
 
 .lined-code-node.line-number {
-    background-color: rgb(240, 242, 245);
     font-family: Menlo, Consolas, Monaco, monospace;
     display: block;
     padding: 8px 8px 8px 52px;
     line-height: 1.53;
-    font-size: 13px;
+    font-size: 20px;
     margin: 0;
+    margin-top: 10px;
     tab-size: 2;
-    white-space: pre;
+
     position: relative;
+    overflow-x: hidden;
+    overflow-wrap: break-word;
 }
 
 .lined-code-node.line-number:before {
     content: attr(data-line-number);
     position: absolute;
-    background-color: #eee;
     left: 0;
     top: 0;
-    border-right: 1px solid #ccc;
     padding: 8px;
     color: #777;
-    white-space: pre-wrap;
     text-align: right;
     min-width: 25px;
 }
 
 .lined-code-node.line-number:after {
     content: attr(data-highlight-language);
-    top: 0;
+    top: 0px;
     right: 3px;
     padding: 3px;
-    font-size: 10px;
+    font-size: 13px;
     text-transform: uppercase;
     position: absolute;
     color: rgba(0, 0, 0, 0.5);
+    margin-top: -9px;
 }
 
 .editor-ltr {
@@ -174,13 +169,10 @@ code.editor-code ltr::before {
 .editor-code.ltr:before {
     content: attr(data-line-number);
     position: absolute;
-    /* background-color: #eee; */
     left: 0;
     top: 0;
-    /* border-right: 1px solid #ccc; */
     padding: 8px;
     color: #777;
-    white-space: pre-wrap;
     text-align: right;
     min-width: 25px;
     z-index: 100;
