--- a/src/components/editor/themes/defaultTheme/defaultTheme.css
+++ b/src/components/editor/themes/defaultTheme/defaultTheme.css
@@ -87,7 +87,7 @@
     color: #fff;
     padding: 5px;
     font-size: 12px;
-    white-space: pre-wrap;
+    /* white-space: pre-wrap; */
     margin: 1px auto 10px auto;
     max-height: 250px;
     position: relative;
@@ -103,15 +103,20 @@
     display: block;
     padding: 8px 8px 8px 52px;
     line-height: 1.53;
-    font-size: 13px;
+    font-size: 20px;
     margin: 0;
     margin-top: 8px;
     margin-bottom: 8px;
     tab-size: 2;
     max-width: 100px;
     /* white-space: pre; */
-    overflow: hidden;
+    /* overflow-x: auto; */
+    /* white-space: normal; */
     word-wrap: wrap;
+}
+
+.editor-code span {
+    font-size: 20px;
 }
 
 .editor-code:before {
@@ -123,7 +128,6 @@
     border-right: 1px solid #ccc;
     padding: 8px;
     color: #777;
-    white-space: pre-wrap;
     text-align: right;
     min-width: 25px;
 }
@@ -133,7 +137,7 @@
     top: 0;
     right: 3px;
     padding: 3px;
-    font-size: 10px;
+    font-size: 20px;
     text-transform: uppercase;
     position: absolute;
     color: rgba(0, 0, 0, 0.5);
@@ -303,11 +307,6 @@ pre::-webkit-scrollbar-thumb {
     background-color: rgba(150, 150, 150, 0.4);
 }
 
-
-
-
-
-
 #block-controls button:hover {
     background-color: #efefef;
 }
@@ -426,7 +425,6 @@ pre::-webkit-scrollbar-thumb {
     color: rgb(33, 111, 219);
     text-decoration: none;
     display: block;
-    white-space: nowrap;
     overflow: hidden;
     margin-right: 30px;
     text-overflow: ellipsis;
@@ -462,11 +460,7 @@ pre::-webkit-scrollbar-thumb {
     vertical-align: -0.25em;
 }
 
-
-/* LINED CODE NODE THEME CLASSES */
-
 .lined-code-node {
-    background-color: rgb(240, 242, 245);
     font-family: Menlo, Consolas, Monaco, monospace;
     display: block;
     padding: 8px;
@@ -476,8 +470,9 @@ pre::-webkit-scrollbar-thumb {
     margin-top: 8px;
     margin-bottom: 8px;
     tab-size: 2;
-    overflow-x: auto;
+    overflow-x: hidden;
     position: relative;
+    overflow-wrap: break-word;
 }
 
 .lined-code-node.line-number {
@@ -485,31 +480,21 @@ pre::-webkit-scrollbar-thumb {
 }
 
 .lined-code-node.line-number:before {
-    /* This selector creates a styled gutter for line numbers. */
-    background-color: #eee;
-    border-right: 1px solid #ccc;
     content: "";
     height: 100%;
     left: 0;
     min-width: 41px;
     position: absolute;
     top: 0;
+    overflow-x: hidden;
+
 }
 
 .line-number:before {
-    /* This selector creates line numbers and places them within the above styled gutter. As a result, the gutter never breaks. */
     color: #777;
     content: attr(data-line-number);
     left: 0px;
     min-width: 33px;
     position: absolute;
     text-align: right;
-}
-
-.code-line {
-    white-space: pre;
-}
-
-.code-line:hover {
-    background-color: yellow;
 }
